fix: update height properties for chats contact list and remove overflow from settings profile container

--- a/client/src/components/Contacts/contacts.module.css
+++ b/client/src/components/Contacts/contacts.module.css
@@ -8,7 +8,8 @@
 }
 .chats-contact-list-wraper {
     background: var(--primary-bg);
-    height: max-content;
+    height: 100%;
+    min-height: max-content;
 }
 .contacts {
     flex-grow: 1;
